--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,18 @@
-services:
+ line-bot-python-flask
+   env: python
+     repo: https://github.com/line/line-bot-sdk-python.git
+       buildCommand: cd examples/flask-echo;pip install gunicorn -r requirements.txt
+         startCommand: cd examples/flask-echo;gunicorn app:app
+           plan: free
+             autoDeploy: false
+               envVars:
+                 - key: LINE_CHANNEL_ACCESS_TOKEN
+                     value: YOUR_LINE_CHANNEL_ACCESS_TOKEN
+                         sync: false
+                           - key: LINE_CHANNEL_SECRET
+                               value: YOUR_LINE_CHANNEL_SECRET
+                                   sync: false
+                                   services:
 - type: web
   name: line-bot-python-flask
   env: python
